[package]
name = "laasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystone-engine = "0.1.0"
clap = { version = "4.0.32", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1